stylesheet/css/index-css.css
html {
    width: 100vw;
    height: 100vh;
}

body {
    display: flex;
    flex-direction: column;
}

.display {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.name {
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.main-element {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    gap: ;
}

